--- a/lab3/DESCRIPTION
+++ b/lab3/DESCRIPTION
@@ -9,3 +9,6 @@ Description: More about what it does (maybe more than one line).
 License: What license is it under?
 RoxygenNote: 7.3.2
 Encoding: UTF-8
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
