--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -30,7 +30,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
+      - name: Set working directory
+        run: cd lab3
       - uses: r-lib/actions/setup-pandoc@v2
 
       - uses: r-lib/actions/setup-r@v2
